--- a/package.json
+++ b/package.json
@@ -16,15 +16,16 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-validator": "^6.15.0",
     "jsonwebtoken": "^9.0.0",
     "morgan": "^1.10.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
+    "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/morgan": "^1.9.4",
     "@types/node": "^18.14.0",
-    "@types/cors": "^2.8.13",
     "prisma": "^4.10.1",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.5"
