--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
     "express": "^4.18.2",
     "express-validator": "^6.15.0",
     "jsonwebtoken": "^9.0.0",
+    "lodash.merge": "^4.6.2",
     "morgan": "^1.10.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
+    "@types/lodash.merge": "^4.6.7",
     "@types/morgan": "^1.9.4",
     "@types/node": "^18.14.0",
     "prisma": "^4.10.1",
