--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,16 @@
 {
     "compilerOptions": {
         "sourceMap": true,
-        "outDir": "dist",
+        "outDir": "./dist",
+        "rootDir": "./src",
+        "strict": false,
         "lib": [
             "esnext"
         ],
-        "esModuleInterop": true
-    }
+        "esModuleInterop": true,
+        "declaration": false
+    },
+    "include": [
+        "src/**/*.ts"
+    ]
 }
